feature: add index.html

--- a/index.html
+++ b/index.html
@@ -1,21 +1,52 @@
-<html>
-    <head>
-        <title>
-            Olá, aqui é o novo dev da EBAC.
-        </title>
-    </head>
-    <body>
-        <h1>h1 Eu sou o corpo</h1>
-        <h2>h2 Eu sou o corpo</h1>
-    </body>
-    <ol>
-        <li>Leite</li>
-        <li>Chá</li>
-        <li>Café</li>
-    </ol>
-    <ul>
-        <li>Leite</li>
-        <li>Chá</li>
-        <li>Café</li>
-    </ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GLYFITON WILLIAM CV</title>
+
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <main class="resume-contents">
+        <section class="left-section">
+            <section class="left-section-content">
+                <div class="profile">
+                    <img class="profile-image" src="img/profile-image1.jpeg" alt="Profile image">
+                        <p class="name">GLYFITON WILLIAM</p>
+                        <p class="profession">New Dev</p>
+                </div>
+                <div class="contact-info">
+                    <p class="left-title">Contato</p>
+                    <ul>
+                        <li><i class="fa fa-phone"></i>+55 66 99999-0000</li>
+                        <li><i class="fa fa-envelope"></i>devdevdev@gmail.com</li>
+                        <li><i class="fa fa-globe"></i>www.glyfitondev.ebac.com</li>
+                        <li><i class="fa fa-github"></i>GlyfitonDev</li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <p class="left-title">Skills</p>
+                    <ul>
+                        <li><p>HTML , CSS , Git & GitHub</p></li>
+                        <li><p>JAVASCRIPT, PHYTON</p></li>
+                    </ul>
+                </div>
+            </section>
+        </section>
+        <section class="right-section">
+            <div class="right-section-contents">
+                <section class="about gap">
+                    <div class="right-title">Sobre mim</div>
+                    <p class="about-me-contents">
+                        Olá, Sou o Glyfiton.<br>
+                        <br>Eu sou iniciante na programação.
+                        <br> Minhas competências.
+                    </p>
+                </section>  
+                </div>
+            </section>   
+    </main>
+</body>
 </html>
