feature: add index.html

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     <div class="right-title">Sobre mim</div>
                     <p class="about-me-contents">
                         Olá, Sou o Glyfiton.<br>
-                        <br>Eu sou iniciante na programação e esse curso de vocês me ajudou a dar o pontapé inicial nessa carreira.
-                        <br> Minhas competências talvez não sejam das melhores pois acabei de iniciar nesse ramo, mas tenho muita força de vontade e me considero autodidata pois foi como aprendi inglês.
+                        <br>Eu sou iniciante na programação.
+                        <br> Minhas competências.
                     </p>
                 </section>  
                 </div>
