Feat add job details (#3)
* feature: add index.html

* feature: add index.html

* feature: add index.html

* feature: add index.html

--- a/index.html
+++ b/index.html
@@ -46,6 +46,36 @@
                     </p>
                 </section>  
                 </div>
+ feat-add-job-details
+            <section class="experience-gap">
+                <div class="right-title">Experiência</div>
+                <div class="experience-contents">
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 01</p>
+                        <p class="exp-time-period">2021-Present</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-positon">Engenheiro de Software</p>
+                        <p class="expe-desc">
+                            Descreva aqui as Principais atividades
+
+                        </p>
+                    </div>
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 02</p>
+                        <p class="exp-time-period">2017-2021-Present</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-positon">Engenheiro de Software</p>
+                        <p class="expe-desc">
+                            Descreva aqui as Principais atividades da empresa 02
+                            
+                        </p>
+                    </div>
+                </div>
+            </section>        
+
+ main
             </section>   
     </main>
 </body>
