feature: add index.html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
                     </p>
                 </section>  
                 </div>
- feat-add-job-details
             <section class="experience-gap">
                 <div class="right-title">Experiência</div>
                 <div class="experience-contents">
@@ -63,7 +62,7 @@
                     </div>
                     <div class="exp-left">
                         <p class="exp-company-name">Empresa 02</p>
-                        <p class="exp-time-period">2017-2021-Present</p>
+                        <p class="exp-time-period">2017-2021</p>
                     </div>
                     <div class="exp-right">
                         <p class="exp-positon">Engenheiro de Software</p>
@@ -73,9 +72,30 @@
                         </p>
                     </div>
                 </div>
+            </section>
+            <section class="education gap">
+                <div class="right-title">Formação Acadêmica</div>
+            <div class="education-contents"></div>
+                <div class="education-left">
+                    <p class="education-school-name">PUC</p>
+                    <p class="education-time-period">2021-2023</p>
+                </div>
+                <div class="education-right">
+                    <p class="education-subject">Engenhario de Software</p>
+                    <p class="edcutaion-desc">
+                        Pós graducação em engenharia de software</p>
+                </div>
+                <div class="education-left">
+                    <p class="education-school-name">UPS</p>
+                    <p class="education-time-period">2015-2018</p>
+                </div>
+                <div class="education-right">
+                    <p class="education-subject">Engenhario da Computação</p>
+                    <p class="edcutaion-desc">
+                        Graducação em engenharia de software</p>
+                </div>
+            </div>
             </section>        
-
- main
             </section>   
     </main>
 </body>
