feature: add index.html

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </section>
             <section class="education gap">
                 <div class="right-title">Formação Acadêmica</div>
-            <div class="education-contents"></div>
+            <div class="education-contents">
                 <div class="education-left">
                     <p class="education-school-name">PUC</p>
                     <p class="education-time-period">2021-2023</p>
@@ -95,7 +95,32 @@
                         Graducação em engenharia de software</p>
                 </div>
             </div>
-            </section>        
+            </section> 
+            <section class="awards gap">
+                <div class="right-title">Cursos</div>
+                <div class="awards-contents">
+                    <div class="awards-left">
+                         <p class="awards-company-name">EBAC</p>
+                         <p class="awards-time-period">Julho de 2021</p>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Curso de UX</p>
+                        <p class="awards-DESC">
+                            Curso feito na EBAC no no de 2021
+                        </p>
+                    </div>
+                    <div class="awards-left">
+                        <p class="awards-company-name">EBAC</p>
+                        <p class="awards-time-period">Julho de 2019</p>
+                   </div>
+                   <div class="awards-right">
+                       <p class="awards-name">Curso de Analise de Dados</p>
+                       <p class="awards-DESC">
+                           Curso feito na EBAC no no de 2019
+                       </p>
+                   </div>
+                </div>
+            </section>      
             </section>   
     </main>
 </body>
